set(ARDUINONVS_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
set(ARDUINONVS_INC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)

file(GLOB ARDUINONVS_SRC ${ARDUINONVS_SRC_DIR}/*.cpp)
file(GLOB ARDUINONVS_INC ${ARDUINONVS_INC_DIR}/*.h)

add_library(arduinonvs STATIC ${ARDUINONVS_SRC} ${ARDUINONVS_INC})

target_include_directories(arduinonvs PUBLIC ${ARDUINONVS_INC_DIR})
